edits for deprecated warnings